[gd_scene load_steps=17 format=3 uid="uid://qpwid257x8d5"]

[ext_resource type="Script" path="res://player.gd" id="1_kgqgy"]
[ext_resource type="PackedScene" uid="uid://dyk68rhre2rqk" path="res://3D models/Player.glb" id="2_u27l8"]
[ext_resource type="AudioStream" uid="uid://bwcvg8f8quigd" path="res://Sounds/Hurt1.mp3" id="3_sggil"]
[ext_resource type="AudioStream" uid="uid://cxi2cpribak3y" path="res://Sounds/Hurt2.mp3" id="4_r5wc4"]
[ext_resource type="AudioStream" uid="uid://wuw42rvdbynx" path="res://Sounds/Hurt3.mp3" id="5_4noki"]
[ext_resource type="AudioStream" uid="uid://bma2se2o1axoi" path="res://Sounds/DeathSound.mp3" id="6_uwxbl"]
[ext_resource type="AudioStream" uid="uid://1h384puqsyox" path="res://Sounds/Jump1.mp3" id="7_31fbe"]
[ext_resource type="AudioStream" uid="uid://8xhrs15arnxu" path="res://Sounds/Jump2.mp3" id="8_gvm88"]
[ext_resource type="AudioStream" uid="uid://bidp3ikbdddf6" path="res://Sounds/Step1.mp3" id="9_pky5m"]
[ext_resource type="AudioStream" uid="uid://dqwkjm2par5ux" path="res://Sounds/Step2.mp3" id="10_anuec"]
[ext_resource type="AudioStream" uid="uid://7buke1dxmy08" path="res://Sounds/Step3.mp3" id="11_jgyru"]
[ext_resource type="PackedScene" uid="uid://dxk1213wvsm8s" path="res://heart.tscn" id="12_wnmim"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_bap2c"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_spsw4"]
streams_count = 3
stream_0/stream = ExtResource("3_sggil")
stream_1/stream = ExtResource("4_r5wc4")
stream_2/stream = ExtResource("5_4noki")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_cl0n7"]
streams_count = 2
stream_0/stream = ExtResource("7_31fbe")
stream_1/stream = ExtResource("8_gvm88")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_q352v"]
streams_count = 3
stream_0/stream = ExtResource("9_pky5m")
stream_1/stream = ExtResource("10_anuec")
stream_2/stream = ExtResource("11_jgyru")

[node name="Player" type="CharacterBody3D" groups=["Player"]]
script = ExtResource("1_kgqgy")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_bap2c")

[node name="PlayerMesh" parent="." instance=ExtResource("2_u27l8")]
transform = Transform3D(0.49771, 0, 0, 0, 0.516562, 0, 0, 0, 0.49771, 0, -0.879, 0)

[node name="HurtTimer" type="Timer" parent="."]
one_shot = true

[node name="HurtSound" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_spsw4")
volume_db = -2.882
max_db = 3.27
bus = &"SFX"

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.75

[node name="DeathSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("6_uwxbl")
volume_db = -2.883
bus = &"SFX"

[node name="Jump" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_cl0n7")
volume_db = -7.0
bus = &"SFX"

[node name="Step" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_q352v")
volume_db = -12.886
pitch_scale = 1.19
bus = &"SFX"

[node name="StepTimer" type="Timer" parent="."]
wait_time = 0.503

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="health_bar" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="health_bar"]
offset_right = 40.0
offset_bottom = 40.0

[node name="heart" type="TextureRect" parent="health_bar/HBoxContainer"]
custom_minimum_size = Vector2(27, 0)
layout_mode = 2

[node name="AnimatedSprite2D" parent="health_bar/HBoxContainer/heart" instance=ExtResource("12_wnmim")]
position = Vector2(10.5, 10)
scale = Vector2(1.3125, 1.25)

[node name="heart2" type="TextureRect" parent="health_bar/HBoxContainer"]
custom_minimum_size = Vector2(27, 0)
layout_mode = 2

[node name="AnimatedSprite2D" parent="health_bar/HBoxContainer/heart2" instance=ExtResource("12_wnmim")]
position = Vector2(10.5, 10)
scale = Vector2(1.3125, 1.25)

[node name="heart3" type="TextureRect" parent="health_bar/HBoxContainer"]
custom_minimum_size = Vector2(27, 0)
layout_mode = 2

[node name="AnimatedSprite2D" parent="health_bar/HBoxContainer/heart3" instance=ExtResource("12_wnmim")]
position = Vector2(10.5, 10)
scale = Vector2(1.3125, 1.25)

[node name="heart4" type="TextureRect" parent="health_bar/HBoxContainer"]
custom_minimum_size = Vector2(27, 0)
layout_mode = 2

[node name="AnimatedSprite2D" parent="health_bar/HBoxContainer/heart4" instance=ExtResource("12_wnmim")]
position = Vector2(10.5, 10)
scale = Vector2(1.3125, 1.25)

[node name="heart5" type="TextureRect" parent="health_bar/HBoxContainer"]
custom_minimum_size = Vector2(27, 0)
layout_mode = 2

[node name="AnimatedSprite2D" parent="health_bar/HBoxContainer/heart5" instance=ExtResource("12_wnmim")]
position = Vector2(10.5, 10)
scale = Vector2(1.3125, 1.25)

[connection signal="timeout" from="HurtTimer" to="." method="_on_hurt_timer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="finished" from="Step" to="." method="_on_step_finished"]
[connection signal="timeout" from="StepTimer" to="." method="_on_step_timer_timeout"]
